@startuml

title __GAMEHANDLING's Class Diagram__\n

  package GameHandling {
    class CollisionHandler {
        {static} + collisionCheck()
        {static} + collisionHandle()
    }
  }
  

  package GameHandling {
    class Controller {
        - datagramSocket : DatagramSocket
        - recieveSocket : DatagramSocket
        - startFrame : JFrame
        - host : boolean
        - recieveData : byte[]
        - recieveThread : Thread
        - playerList : List<Player>
        - playerContainer : Container
        - textArea : TextArea
        - royal : Checkbox
        - speed : Checkbox
        - apples : Checkbox
        - guns : Checkbox
        - ghost : Checkbox
        - started : boolean
        - royalB : boolean
        - speedB : boolean
        - applesB : boolean
        - gunsB : boolean
        - ghostB : boolean
        + Controller()
        + update()
        - getAdressFromString()
        - getDirFromString()
        - sendDataToPlayers()
        - showStartScreen()
        + startGame()
        + buttonClicked()
        - checkGameMode()
        - hostKeyPressed()
    }
  }
  

  package GameHandling {
    class GameEngine {
        {static} + GameWorld : char[][]
        {static} + playerList : List<Player>
        {static} + dObjectList : List<DynamicObject>
        {static} + changes : List<Change>
        - spawnList : List<Boost>
        - gameTimer : Timer
        - gameCOunter : int
        - ghostCounter : int
        - shrinkCOunter : int
        - gameOver : boolean
        - apples : boolean
        - lightning : boolean
        - gun : boolean
        - ghost : boolean
        - royal : boolean
        + GameEngine()
        - gameTick()
        + updateBullets()
        + checkForGameOver()
        + getGameWorld()
        - battleRoyal()
        - spawnGun()
        + randomPos()
        - shrinkWalls()
        - makeSpawnList()
        - updateBoosts()
        - updateWorms()
        - updateDynamicObjects()
        {static} + updateGameworld()
        + tellObservers()
        + resetGameworld()
        + loadGameworld()
        {static} + removeFromDynamicList()
    }
  }
  

  Controller -up-|> Observer
  Controller o-- GameEngine : gameEngine
  Controller o-- GameWindow : gw
  Controller o-- NetworkReciever : nwReciever
  GameEngine -up-|> Observable
  GameEngine o-- BoostManager : boostManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
